@@ -297,6 +297,8 @@ typedef enum {
 - (void)replaceSelectionWithText:(NSString *)text selectReplacement:(BOOL)selectReplacement;
 - (void)replaceSelectionWithNewline;
 
+- (void)insertText:(NSString *)text;
+
 - (void)setSelectionToDragCaret;
 - (void)moveSelectionToDragCaret:(DOMDocumentFragment *)selectionFragment;
 - (void)moveDragCaretToPoint:(NSPoint)point;
